fix: dark mode on init position

--- a/src/pages/Pool-V3/components/CreatePosition/index.module.scss
+++ b/src/pages/Pool-V3/components/CreatePosition/index.module.scss
@@ -68,6 +68,27 @@
 
     .item {
       flex: 1;
+      position: relative;
+
+      .noToken {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 500px;
+        opacity: 0.8;
+        background: var(--Colors-Neutral-Surface-bg-section-05, #1b1c1a);
+
+        text-align: center;
+        color: var(--Colors-Neutral-Text-text-token-name, #f7f7f7);
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 150%; /* 24px */
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
       .wrapper {
         width: 100%;
@@ -159,7 +180,7 @@
             font-weight: 400;
             line-height: 18px;
           }
-          
+
           .currentPriceValue {
             color: var(--Colors-Neutral-Text-text-token-name, #f7f7f7);
             text-align: end;
